@startuml

title __LOGIN_1TH's Class Diagram__\n

  namespace com.example.login_1th {
    class com.example.login_1th.HomeActivity {
        - btnReturn : Button
        # onCreate()
    }
  }
  

  namespace com.example.login_1th {
    class com.example.login_1th.MainActivity {
        - exit : Button
        - login : Button
        - password : EditText
        - username : EditText
        # onCreate()
    }
  }
  

  namespace com.example.login_1th {
    class com.example.login_1th.WelcomeActivity {
        # onCreate()
    }
  }
  

  com.example.login_1th.HomeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.login_1th.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.login_1th.WelcomeActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
